--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <h1>🍃 Leaf Disease Detection</h1>
         <p>Upload a plant leaf image to detect its disease status.</p>
 
-        <form action="/predict" method="post" enctype="multipart/form-data">
+     <form action="https://leafdisease-api.onrender.com/predict" method="post" enctype="multipart/form-data">
+
             <input type="file" name="file" accept="image/*" required><br>
             <button type="submit">Detect Disease</button>
         </form>
